Fix ugly wrapping.

--- a/shell/client/_account.scss
+++ b/shell/client/_account.scss
@@ -793,6 +793,10 @@ body>.popup.billing-prompt>.frame {
     max-width: 440px;
     margin: 1em auto;
 
+    &.wider {
+      max-width: 590px;
+    }
+
     >a {
       color: inherit;
     }
